fixed display overflows

--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,13 @@ body {
 
 body, html {
   margin-top: 0px;
-  height: 100%;
+  /* height: 100%; */
 }
 
 #content-wrap {
   min-height:100%;
    position:relative;
+   padding-bottom: 0px;
 }
 
 #content {
@@ -101,6 +102,7 @@ button:hover {
 }
 
 #motto {
+  max-width: 70%;
   position: relative;
   left: 190px;
   bottom: 80px;
@@ -109,9 +111,11 @@ button:hover {
 #header h1 {
   margin-top: 0;
   margin-bottom: 0;
+  max-width: 500px;
 }
 
 #header p {
+  max-width: 500px;
   margin-top: 0;
   margin-bottom: 0px;
   font-size: 1.1em;
@@ -264,8 +268,9 @@ a:hover {
   }
 
 #footer {
-   clear: both;
+   
     position: absolute;
+    left: 125px;
     bottom: 25px;
     
 }
